cmake_minimum_required (VERSION 2.8)
project (raid_manager)

OPTION(NUUO "Enable to use NUUO utility libraries" ON)

IF (${NUUO})
INCLUDE_DIRECTORIES(${SysUtilsPath})
ADD_DEFINITIONS(-DNUUO -DNUUO_FLAG=1)
ELSE (${NUUO})
ADD_DEFINITIONS(-DNUUO_FLAG=0)
ENDIF (${NUUO})

SET(RAIDMANAGER_SRCFILE
	RAIDManager.cpp
	test_utils.cpp
)

SET(FILESYSTEMMANAGER_SRCFILE
	FilesystemManager.cpp
	test_utils.cpp
)

ADD_LIBRARY(raidmgrobj SHARED ${RAIDMANAGER_SRCFILE})
ADD_LIBRARY(fsmgrobj SHARED ${FILESYSTEMMANAGER_SRCFILE})

ADD_SUBDIRECTORY(libmdadm)
ADD_SUBDIRECTORY(libmke2fs)
ADD_SUBDIRECTORY(unitest)
