cmake_minimum_required (VERSION 2.8)
project (raid_manager)

OPTION(NUUO "Enable to use NUUO utility libraries" ON)

IF (${NUUO})
INCLUDE_DIRECTORIES(${SysUtilsPath})
INCLUDE_DIRECTORIES(${TitanUtilsPath})
ADD_DEFINITIONS(-DNUUO -D_DEBUG)
ELSE (${NUUO})
SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ENDIF (${NUUO})

SET(RAIDMANAGER_SRCFILE
	RAIDManager.cpp
	test_utils.cpp
)

SET(FILESYSTEMMANAGER_SRCFILE
	FilesystemManager.cpp
	test_utils.cpp
)

ADD_LIBRARY(raidmgrobj SHARED ${RAIDMANAGER_SRCFILE})
ADD_LIBRARY(fsmgrobj SHARED ${FILESYSTEMMANAGER_SRCFILE})

ADD_SUBDIRECTORY(libmdadm)
ADD_SUBDIRECTORY(libmke2fs)
ADD_SUBDIRECTORY(unitest)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
